content/mobile.css
@import url('https://fonts.googleapis.com/css?family=Dosis|Montserrat|Open+Sans|PT+Sans&display=swap');

html{
}

body {
  font-family: 'Helvetica Neue';
  background-color: #3d3f44;
  margin: 0;
}

.TitleContainer {
  position: relative;
  height: 400px;
  margin-left: 0%;
  margin-right: 0%;
  background-color: #82c5d6;
}

.BodyContainer {
  font-weight: 300;
  -webkit-text-size-adjust: none;
  overflow: hidden;
  position: relative;
  margin-top: 0;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;
  background-color:white;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-top: 20px;
  color: #2f3442;
}

.BodyContainer h1 {
  font-family: 'Montserrat';
  font-weight: 300;
  padding-left: 0%;
  margin: 0px;
  margin-bottom: 10px;
  margin-top: 0px;
  color: #bf4aa8;
}

.BodyContainer h2, h3 {
  font-family: 'Montserrat';
  font-weight: 300;
}

.BodyContainer p{
  font-size: 18px;
  font-weight:300;
  letter-spacing: 0.03em;
}

.BodyContainer a{
  text-decoration: none;
  color: #bf4aa8;
  font-weight: 300;
}

.BodyContainer img{
  display: block;
  position: relative;
  float:right;
  max-height: 200px;
  max-width: 30vw;
  padding-left: 20px;
  padding-right: 10px;
  padding-bottom:5px;
  margin-top: 50px;
}

svg {
  padding:0px;
  background-image: linear-gradient(to bottom left,#1b1e26,#2f3442);
  border-style: none;
  border-radius: 0px;
}

canvas {
  width:100%;
  height:100%;
  border-style: none;
  border-radius: 0px;
}

.MouseListener {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}

.TitleContainer{
  background-image: linear-gradient(to bottom left,#1b1e26,#2f3442);
}

.TitleBox {
  display:flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  padding-left:20px;
  padding-right:20px;
  padding-bottom:5px;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 2;
  margin-left:0;
  margin-right:0;
  color: white;
  opacity: 0;
  animation: fadeIn .5s ease-in 1 forwards;
}

.TitleContainer .Name{
  font-family: 'Montserrat';
  position:relative;
  width:100%;
  margin-left: 0;
  margin-right: 0;
  font-size: 40px;
  color: white;
  padding-left: 0px;
  padding-bottom: 10px;
}

.TitleBox .Button {
    display: inline-block;
    background: none;
    margin:0;
    padding: 0;
    bottom:0;
    height:100%;
}

.TitleBox a{
  font-family: "Montserrat";
  text-decoration: none;
  color: white;
  font-weight: normal;
  text-align: bottom;
  font-size: 22px;
  margin:0;
  padding:0;
}

.Footer {
  letter-spacing: 0.03em;
  font-size:16px;
  font-weight: 300;
  color: gray;
  margin-left: 0;
  margin-right: 0;
  padding-top:5px;
  padding-bottom:5px;
  padding-left: 20px;
}

.Footer a{
  text-decoration: none;
  color: gray;
  font-weight: 300;
}

@media only screen and (max-width: 365px) {
  .BodyContainer p{
    font-size: 16px;
  }

  .TitleBox .Name {
    font-size: 35px;
  }

  .TitleBox a{
    font-size: 18px;
    margin-right: 10px;
  }
}

